frontend/src/components/button/Button.css
.button {
  width: 12rem;
  height: 4rem;
  background: #3360ff;
  box-shadow: 0px 4px 4px rgba(51, 96, 255, 0.65);
  border-radius: 16px;
  border: none;
  color: #fff;
  font-size: 2rem;
  font-weight: bold;
  cursor: pointer;
}

.button:hover {
  width: 11.75rem;
  height: 3.9rem;
  box-shadow: 0px 5px 5px rgba(51, 96, 255, 0.65);
  font-size: 1.95rem;
}

